Fixed the ranking likes bug which orinally limit the number of likes to 25

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="你將可以在這個網頁上看到「主顧榮譽書院劇場」的所有文章，另外可以在首頁最熱門的 5 則成功故事 😆">
   <meta name="author" content="Leo Chiu">
-  <meta property="og:image" content="http://bookstore.lionfree.net/practice/img/macbook-air.jpg"/> 
+  <meta property="og:image" content="http://bookstore.lionfree.net/likes_ranker/img/macbook-air.jpg"/>
+  <meta property="og:url" content="http://bookstore.lionfree.net/likes_ranker/"/> 
   <title>LIKES RANKER</title>
   <!-- Bootstrap Core CSS -->
   <link rel="stylesheet" type="text/css" href="css/loading-animation.css">
