Change the Other page of <nav li> to All page and typesetting

--- a/other.html
+++ b/other.html
@@ -17,7 +17,7 @@
   <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-  <script src="js/fb-load.js"></script>
+  <script src="js/fb-load-min.js"></script>
   <link rel="stylesheet" type="text/css" href="css/loading-animation.css">
   <link rel="stylesheet" type="text/css" href="css/content.css">
 </head>
@@ -40,10 +40,10 @@
             <a href="index.html">Home</a>
           </li>
           <li style="font-family: Microsoft JhengHei">
-            <a href="other.html">Other Post</a>
+            <a href="other.html">All Post</a>
           </li>
           <li style="font-family: Microsoft JhengHei">
-            <a href="https://www.facebook.com/%E4%B8%BB%E9%A1%A7%E6%A6%AE%E8%AD%BD%E6%9B%B8%E9%99%A2%E5%8A%87%E5%A0%B4-170659829952078/?fref=ts">FB粉絲團</a>
+            <a href="https://www.facebook.com/%E4%B8%BB%E9%A1%A7%E6%A6%AE%E8%AD%BD%E6%9B%B8%E9%99%A2%E5%8A%87%E5%A0%B4-170659829952078/?fref=ts">Fan page</a>
           </li>
           <!--<li>
             <a href="about.html">About</a>
