--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="你將可以在這個網頁上看到「主顧榮譽書院劇場」的所有文章，另外可以在首頁最熱門的 5 則成功故事 😆">
+  <meta name="og:description" content="你將可以在這個網頁上看到「主顧榮譽書院劇場」的所有文章，另外可以在首頁最熱門的 5 則成功故事 😆">
   <meta name="author" content="Leo Chiu">
+  <meta property="og:title" content="Likes Ranker"/>
   <meta property="og:image" content="http://bookstore.lionfree.net/likes_ranker/img/macbook-air.jpg" />
   <meta property="og:url" content="http://bookstore.lionfree.net/likes_ranker/" />
   <title>LIKES RANKER</title>
@@ -21,7 +22,7 @@
   <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-  <script src="js/fb-load-part.js"></script>
+  <script src="js/fb-load-part-min.js"></script>
   <link rel="stylesheet" type="text/css" href="css/content.css">
 </head>
 
@@ -43,10 +44,10 @@
             <a href="index.html">Home</a>
           </li>
           <li>
-            <a href="other.html">Other Post</a>
+            <a href="other.html">All Post</a>
           </li>
           <li>
-            <a href="https://www.facebook.com/%E4%B8%BB%E9%A1%A7%E6%A6%AE%E8%AD%BD%E6%9B%B8%E9%99%A2%E5%8A%87%E5%A0%B4-170659829952078/?fref=ts">FB粉絲團</a>
+            <a href="https://www.facebook.com/%E4%B8%BB%E9%A1%A7%E6%A6%AE%E8%AD%BD%E6%9B%B8%E9%99%A2%E5%8A%87%E5%A0%B4-170659829952078/?fref=ts">Fan Page</a>
           </li>
           <!--<li>
             <a href="#">Contact</a>
@@ -64,7 +65,7 @@
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
           <div class="site-heading">
-            <h1>Likes Ranking</h1>
+            <h1>Likes Ranker</h1>
             <hr class="small">
             <span class="subheading">You can see the top5 likes ranking of the article</span>
           </div>
@@ -92,7 +93,7 @@
         <!-- Pager -->
         <ul class="pager">
           <li class="next">
-            <a href="other.html">Other Posts &rarr;</a>
+            <a href="other.html">All Posts &rarr;</a>
           </li>
         </ul>
       </div>
